# corrosion-plugin

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  LICENCE.md  README.md  bundle-win.sh  bundle.sh
.cargo/: config.toml
.github/workflows/: ci.yml
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/evidence/: gate-0-review.md  gate-0-summary.md  gate-1-summary.md  gate-2-summary.md  gate-3-summary.md  gate-4-preflight.md  gate-4-summary.md  parameter-ranges.md  sisyphus-reconciliation-manifest.md  task-G1-9-blocked.md  task-G4-1-gui.md  task-G4-10-viz.md  task-G4-11-regression.md  task-G4-2-5-macros.md  task-G4-6-mapping.md  task-G4-7-randomizer.md  task-G4-8-mutate.md  task-G4-9-browser.md
.sisyphus/plans/: corrosion-roadmap.md  sisyphus-reconciliation.md
benches/: performance.rs
docs/: AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CODE-REVIEW.md  DEVELOPMENT_GUIDELINES.md  EXECUTION_TRACKER.md  IMPLEMENTATION_PLAN.md  KNOWN_LIMITATIONS.md  PRD.md  code-review-2026-05-02.md  corrosion_plugin_prd_and_specs.md  full-feature-surface.md  interface-design-specification.md  master-prompt.md  production-hardening-log.md  sound-direction-brief.md  ui-interface-design-brief.md
evidence/: Corrosion UI - AD Envelope.html  Corrosion UI - ADSR Envelope.html  Corrosion UI - MSEG Envelope.html  Corrosion UI - Variation 4.html
output/: preset_render_manifest.txt  render_summary.txt
scripts/: AGENTS.md  analyze_wav.py  check_clicks.py  check_wav.py  validate-plugins.sh  verify-local.sh
src/: AGENTS.md  lib.rs  main.rs  params.rs  renderer.rs
tests/: AGENTS.md  automation_stress.rs  body.rs  bow_exciter.rs  chain_distinct.rs  damage_rattle.rs  drive_dynamics.rs  limiter.rs  no_alloc.rs  plugin_metrics.rs  preset_roundtrip.rs  scrape_exciter.rs  stereo_width.rs  velocity_brightness.rs  velocity_expressivity.rs
(+271 files in other folders)
