[package]
name = "corrosion"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "render"
path = "src/bin/render.rs"

[[bin]]
name = "render_presets"
path = "src/bin/render_presets.rs"

[[bin]]
name = "seed_presets"
path = "src/bin/seed_presets.rs"

[dependencies]
nih-plug = { package = "nih_plug", git = "https://github.com/robbert-vdh/nih-plug" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug", optional = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.7"

[target.'cfg(not(target_os = "windows"))'.dependencies]
nih-plug = { package = "nih_plug", git = "https://github.com/robbert-vdh/nih-plug", features = ["assert_process_allocs"] }

[features]
default = ["gui"]
gui = ["nih_plug_egui"]

[dev-dependencies]
assert_no_alloc = { git = "https://github.com/robbert-vdh/rust-assert-no-alloc.git", branch = "feature/nested-permit-forbid" }
criterion = "0.5"

[[bench]]
name = "performance"
harness = false
